@@ -30,14 +30,12 @@ func New(b *beat.Beat, rawConfig *common.Config) (beat.Beater, error) {
 	// List all registered modules and metricsets.
 	logp.Info("%s", mb.Registry.String())
 
-	config := Config{}
-
-	err := rawConfig.Unpack(&config)
-	if err != nil {
+	config := defaultConfig
+	if err := rawConfig.Unpack(&config); err != nil {
 		return nil, errors.Wrap(err, "error reading configuration file")
 	}
 
-	modules, err := module.NewWrappers(config.Modules, mb.Registry)
+	modules, err := module.NewWrappers(config.MaxStartDelay, config.Modules, mb.Registry)
 	if err != nil {
 		// Empty config is fine if dynamic config is enabled
 		if !config.ReloadModules.Enabled() {
@@ -61,7 +59,6 @@ func New(b *beat.Beat, rawConfig *common.Config) (beat.Beater, error) {
 // that a single unresponsive host cannot inadvertently block other hosts
 // within the same Module and MetricSet from collection.
 func (bt *Metricbeat) Run(b *beat.Beat) error {
-
 	var wg sync.WaitGroup
 
 	for _, m := range bt.modules {
@@ -78,7 +75,7 @@ func (bt *Metricbeat) Run(b *beat.Beat) error {
 	if bt.config.ReloadModules.Enabled() {
 		logp.Beta("feature dynamic configuration reloading is enabled.")
 		moduleReloader := cfgfile.NewReloader(bt.config.ReloadModules)
-		factory := module.NewFactory(b.Publisher)
+		factory := module.NewFactory(bt.config.MaxStartDelay, b.Publisher)
 
 		go moduleReloader.Run(factory)
 		wg.Add(1)
