@@ -98,6 +98,9 @@ metricbeat.config.modules:
   reload.enabled: true
 {% endif -%}
 
+# Disable random start delay for metricsets.
+metricbeat.max_start_delay: 0
+
 #================================ General =====================================
 
 # The name of the shipper that publishes the network data. It can be used to group
